--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "apollo-server-express": "^2.9.16",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-gql": "^0.0.4",
+    "graphql": "^14.5.8",
     "graphql-upload": "^9.0.0",
     "mongoose": "^5.8.7"
   },
