--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "node ./src/server.js",
+    "dev": "nodemon ./src/server.js"
+  },
   "dependencies": {
     "apollo-server-express": "^2.9.16",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-gql": "^0.0.4",
-    "graphql": "^14.5.8",
-    "graphql-upload": "^9.0.0",
-    "mongoose": "^5.8.7"
+    "graphql-playground-middleware-express": "^1.7.12",
+    "graphql-tools": "^4.0.6",
+    "mongoose": "^5.8.7",
+    "validator": "^12.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
