--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-gql": "^0.0.4",
+    "graphql": "^14.6.0",
     "graphql-playground-middleware-express": "^1.7.12",
     "graphql-tools": "^4.0.6",
     "mongoose": "^5.8.7",
