--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^5.1.0",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-gql": "^0.0.4",
     "graphql": "^14.6.0",
     "graphql-playground-middleware-express": "^1.7.12",
     "graphql-tools": "^4.0.6",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.7",
     "validator": "^12.1.0"
   },
