--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "graphql": "^14.6.0",
     "graphql-playground-middleware-express": "^1.7.12",
     "graphql-tools": "^4.0.6",
+    "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.7",
+    "react-router-dom": "^5.1.2",
     "validator": "^12.1.0"
   },
   "devDependencies": {
