--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.1.0",
     "cookie-parser": "^1.4.4",
-    "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-gql": "^0.0.4",
     "graphql": "^14.6.0",
+    "graphql-middleware": "^4.0.2",
     "graphql-playground-middleware-express": "^1.7.12",
     "graphql-tools": "^4.0.6",
     "js-cookie": "^2.2.1",
