--- a/package.json
+++ b/package.json
@@ -10,24 +10,17 @@
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
-    "apollo-server-express": "^2.9.16",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^5.1.0",
     "cookie-parser": "^1.4.4",
-    "csurf": "^1.11.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-gql": "^0.0.4",
-    "graphql": "^14.6.0",
-    "graphql-middleware": "^4.0.2",
-    "graphql-playground-middleware-express": "^1.7.12",
-    "graphql-tools": "^4.0.6",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.7",
-    "react-router-dom": "^5.1.2",
     "validator": "^12.1.0"
   },
   "devDependencies": {
